fix the overflow background

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,8 @@
   }
   
   .main-bg {
-    background-color: #5e2c1a;
+    background-color: rgb(61, 61, 61);
+    /* background-color: #5e2c1a; */
     height: 100vh;
     width: 100%;
     z-index: 1;
@@ -95,7 +96,7 @@
   }
   
   .main-bg {
-    background-color: #5e2c1a;
+    /* background-color: #5e2c1a; */
     height: 100vh;
     width: 100vw;
     z-index: 1;
